--- a/Suave/Suave.fsproj
+++ b/Suave/Suave.fsproj
@@ -33,6 +33,9 @@
     <Reference Include="Suave">
       <HintPath>..\packages\Suave.0.26.0\lib\net40\Suave.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
