--- a/Suave/packages.config
+++ b/Suave/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FSharp.Core" version="3.1.2.1" targetFramework="net40" />
   <package id="FsPickler" version="1.0.7" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
   <package id="Suave" version="0.26.0" targetFramework="net40" />
 </packages>
